components/security/aws/aws-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ack-system
  labels:
    app.kubernetes.io/part-of: ack
